# DeepSeek-TUI

./: .gitignore  .mailmap  AGENTS.md  CHANGELOG.md  Cargo.toml  DEPENDENCY_GRAPH.md  Dockerfile  README.es-419.md  README.ja-JP.md  README.ko-KR.md  README.md  README.pt-BR.md  README.vi.md  README.zh-CN.md  config.example.toml
.claude/: HANDOFF_v0.8.28_user_issues.md
.github/workflows/: deploy-web.yml  release.yml
crates/agent/: Cargo.toml
crates/app-server/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/execpolicy/: Cargo.toml
crates/hooks/: Cargo.toml
crates/mcp/: Cargo.toml
crates/tools/: Cargo.toml
crates/tui/: CHANGELOG.md  Cargo.toml
crates/tui/src/: child_env.rs  client.rs  compaction.rs  config.rs  config_ui.rs  cycle_manager.rs  deepseek_theme.rs  dependencies.rs  handoff.rs  localization.rs  main.rs  mcp.rs  memory.rs  palette.rs  prefix_cache.rs  prompts.rs  runtime_threads.rs  session_manager.rs  settings.rs
crates/tui/src/client/: chat.rs
crates/tui/src/commands/: config.rs  core.rs  debug.rs  init.rs  memory.rs  mod.rs  restore.rs  session.rs  skills.rs  user_commands.rs  user_registry.rs
crates/tui/src/commands/groups/utility/: task.rs
crates/tui/src/core/: engine.rs  events.rs  session.rs
crates/tui/src/core/engine/: tests.rs  tool_setup.rs  turn_loop.rs
crates/tui/src/palette/: themes.rs
crates/tui/src/prompts/: agent.txt  base.md  hetun.txt
crates/tui/src/repl/: runtime.rs
crates/tui/src/rlm/: mod.rs
crates/tui/src/sandbox/: seatbelt.rs
crates/tui/src/skills/: mod.rs
crates/tui/src/tools/: file.rs  fim.rs  large_output_router.rs  mod.rs  registry.rs  rlm.rs  shell.rs  spec.rs  workflow.rs
crates/tui/src/tools/shell/: tests.rs
crates/tui/src/tools/subagent/: mailbox.rs  mod.rs  tests.rs
crates/tui/src/tui/: active_cell.rs  app.rs  approval.rs  color_compat.rs  command_palette.rs  format_helpers.rs  frame_rate_limiter.rs  history.rs  keybindings.rs  live_transcript.rs  markdown_render.rs  mod.rs  model_picker.rs  notifications.rs  osc8.rs  pager.rs  plan_prompt.rs  provider_picker.rs  scrolling.rs  session_picker.rs  sidebar.rs  slash_menu.rs  subagent_routing.rs  transcript.rs  ui.rs  underwater.rs  user_input.rs
crates/tui/src/tui/ui/: tests.rs
crates/tui/src/tui/views/: help.rs  mod.rs  mode_picker.rs  status_picker.rs
crates/tui/src/tui/widgets/: agent_card.rs  footer.rs  header.rs  mod.rs  pending_input_preview.rs  tool_card.rs
crates/tui/src/tui/work_surface/: mod.rs  model.rs
crates/tui/src/vision/: tools.rs
crates/tui/src/work_graph/: digest.rs  mod.rs
crates/tui/tests/: protocol_recovery.rs  qa_pty.rs
crates/tui/tests/support/qa_harness/: harness.rs  pty.rs
docs/: CONFIGURATION.md  INSTALL.md  KEYBINDINGS.md  MODES.md  RELEASE_RUNBOOK.md  TOOL_SURFACE.md  research-react-vs-rlm.md  rlm-design.md
docs/archive/: workspace_migration_status.md
npm/deepseek-tui/: README.md  package.json
npm/deepseek-tui/scripts/: install.js
web/app/[locale]/: page.tsx
web/app/[locale]/install/: page.tsx
web/components/: footer.tsx
web/lib/: facts.generated.ts
