[package]
name = "deepseek-tui-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Codex-style CLI facade for DeepSeek workspace architecture"

[[bin]]
name = "deepseek"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
deepseek-agent = { path = "../agent", version = "0.6.0" }
deepseek-app-server = { path = "../app-server", version = "0.6.0" }
deepseek-config = { path = "../config", version = "0.6.0" }
deepseek-execpolicy = { path = "../execpolicy", version = "0.6.0" }
deepseek-mcp = { path = "../mcp", version = "0.6.0" }
deepseek-secrets = { path = "../secrets", version = "0.6.0" }
deepseek-state = { path = "../state", version = "0.6.0" }
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.16"
